--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "generate": "kubb generate",
-    "generate-cs": "kubb generate -c kubb.config-cs.ts"
+    "generate-cs": "kubb generate -c kubb.config-cs.ts",
+    "generate-nest": "kubb generate -c kubb.config-nest.ts"
   },
   "dependencies": {
     "@kubb/plugin-client": "^3.14.0",
@@ -40,5 +41,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.3"
-  }
+  },
+  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
